<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Global -->
    <string name="app_name">BukuDroid</string>
    <string name="app_fb_fan_page">http://on.fb.me/BukuDroid</string>
    <string name="app_market_page">http://market.android.com/details?id=org.csie.mpp.buku</string>
    <string name="country_code">en_US</string>
    <string name="msg_confirm_delete">Delete this post?</string>
    <string name="msg_deleted">Successfully deleted.</string>
    <string name="msg_delete_failed">Delete failed:\ </string>
    <string name="msg_updating">Updating...</string>
    
    <!-- About -->
    <string name="text_find_out_more">Find out more on Facebook!</string>
    <string name="text_what_is_bukudroid">An app for bookworms!</string>
    <string name="title_about_bukudroid">About BukuDroid</string>
    
    <!-- Account -->
    <string name="msg_login_success">Successfully Logged-in.</string>
    <string name="msg_logout_success">Successfully Logged-out.</string>
    <string name="title_account_sync">Account Setting</string>
    <string-array name="list_account">
        <item>Facebook</item>
    </string-array>
    
    <!-- Search -->
    <string name="hint_search">Author, Title, ISBN</string>
    <string name="title_search_result">Search Result</string>
    
    <!-- ViewPager -->
    <string name="hint_add_book_to_start">Click the button on the upper-right corner to add some books.</string>
    <string name="menu_about">About</string>
    <string name="menu_account_sync">Account Setting</string>
    <string name="menu_search">Search</string>
    <string name="menu_invite">Invite</string>
    <string name="msg_no_friends">You have no friends... QQ</string>
    <string name="msg_no_streams">You have no streams... QQ</string>
    <string name="msg_invite">Join BukuDroid! An app for book lovers!</string>
    <string name="title_bookshelf">Bookshelf</string>
    <string name="title_friends">Friends</string>
    <string name="title_stream">Stream</string>
    
    <string-array name="list_longclick">
        <item>Information</item>
        <item>Delete</item>
    </string-array>
    
    <!-- Book -->
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_to">Share with Friend</string>
    <string name="msg_book_added">Successfully added to your bookshelf.</string>
    <string name="msg_book_already_exists">You already have this book in the bookshelf.</string>
    <string name="msg_book_not_found">Book not found.</string>
    <string name="msg_invalid_isbn">Invalid ISBN.</string>
    <string name="msg_unexpected_error">Unexpected error! Please check the network connection or contact the developers.</string>
    <string name="text_no_data">No data.</string>
    <string name="text_source">Source：</string>
    <string name="title_book_info">Information</string>
    <string name="title_buku_friends">BukuDroid Friends</string>
    <string name="title_introduction">Introduction</string>
    <string name="title_other_friends">Other Friends</string>
    <string name="title_review">Reviews</string>
    <string name="title_select_friend">Select a Friend</string>
    
    <!-- Stream -->
    <string name="text_posted_by">Posted by</string>
    <string name="text_says">Says：</string>
    <string name="title_comments">Comments</string>
    <string name="title_posting">Posting Comment</string>
    <string name="title_reply_post">Reply the Post</string>
    <string name="menu_comment">Add Comment</string>
    
    <!-- Scan -->
    <string name="tab_barcode">Barcode</string>
    <string name="tab_isbn">ISBN</string>
    <string name="tag_isbn">ISBN</string>
    <string name="tab_search">Search</string>
    
    <!-- Facebook -->
    <string name="fb_message_posted">Message posted.</string>
    <string name="fb_posting">Posting...</string>
    
    <!-- Search -->
    <string name="search_no_result">No result!</string>
    
    <!--  Books Keyword Search -->
    <string-array name="keytype">
	    <item>All types</item>
	    <item>Title</item>
	    <item>Author</item>
	    <item>Publisher</item>
    </string-array>
    <string name="key_search">Searching</string>
    <string name="key_searching">Please wait a moment...</string>
    
</resources>
