<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_books" android:visible="true">
        <item
            android:icon="@drawable/ic_menu_search"
            android:id="@+id/menu_search"
            android:title="@string/menu_search"
        />
    </group>
    <group android:id="@+id/menu_streams" android:visible="false">
    </group>
    <group android:id="@+id/menu_friends" android:visible="false">
        <item
            android:icon="@drawable/ic_menu_invite"
            android:id="@+id/menu_invite"
            android:title="@string/menu_invite"
        />
    </group>
    <item
        android:icon="@drawable/ic_menu_facebook"
        android:id="@+id/menu_account_sync"
        android:title="@string/menu_account_sync"
    />
    <item
        android:icon="@drawable/icon"
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
    />
</menu>