<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/org.csie.mpp.buku"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical"
>
    <TextView
        style="@style/Font.Dialog"
        android:text="@string/text_what_is_bukudroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />
    <ImageView
        android:src="@drawable/icon_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
    />
    <TextView
        style="@style/Font.Dialog"
        android:text="@string/text_find_out_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />
    <TextView
        style="@style/Font.Dialog"
        android:id="@+id/link"
        android:text="@string/app_fb_fan_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    />
</LinearLayout>