<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/org.csie.mpp.buku"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
>
    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:title="@string/title_book_info"
        style="@style/ActionBar"
    />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical"
    >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        >
            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxWidth="@dimen/maxImageWidth"
            />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:orientation="vertical"
            >
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fontLarge"
                />
                <TextView
                    android:id="@+id/author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fontMedian"
                />
                <LinearLayout
                    android:id="@+id/like_button"
                    android:layout_width="fill_parent"
                    android:layout_height="36dip"
                />
            </LinearLayout>

        </LinearLayout>
        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
        />
        <TextView
            style="@style/Font.SubTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_introduction"
        />
        <TextView
            style="@style/Font.Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description"
        />
        <TextView
            style="@style/Font.SubTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_review"
        />
        <LinearLayout
            android:id="@+id/reviews"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_source"
                android:textColor="@color/dimTextColor"
            />
            <TextView
                android:id="@+id/sources"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>